fixed footer overlapping

--- a/static/style.css
+++ b/static/style.css
@@ -56,7 +56,7 @@ body {
   left: 50%;
   bottom: 80px;
   font-size: 16px;
-  opacity: 0.6;
+  opacity: 1;
 }
 
 #snackbar.show {
@@ -70,7 +70,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  margin: 5%;
+  margin: 2%;
 }
 
 footer p {
